Navbar alignment fix

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -40,7 +40,7 @@
 .primaryBackground {
   background-color: #212121;
   color: white;
-  min-height: 93vh;
+  min-height: 91vh;
   text-align: center;
 }
 
@@ -56,10 +56,8 @@
 .NavBackground {
   background-color: #484848;
   color: white;
-  text-align: center;
   padding: 5px;
-  align-content: center;
-  height: 7vh;
+  height: 9vh;
 }
 
 .formStyle {
